--- a/printer/src/main/AndroidManifest.xml
+++ b/printer/src/main/AndroidManifest.xml
@@ -1,2 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest />
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <queries>
+        <package android:name="woyou.aidlservice.jiuiv5" />
+    </queries>
+
+    <queries>
+        <package android:name="com.neo.printer.sdk" />
+        <intent>
+            <action android:name="com.neo.printer.sdk.core.ApiAdapterManager.NeoPrinterService" />
+        </intent>
+    </queries>
+</manifest>
